--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -5,7 +5,12 @@
 {
   "languages": {
     "Nix": {
-      "language_servers": ["nixd", "!nil"]
+      "language_servers": ["nixd", "!nil"],
+      "formatter": {
+        "external": {
+          "command": "alejandra"
+        }
+      }
     }
   }
 }
